<resources>

    <!-- global -->
    <string name="app_name">Full 02 Example</string>
    <string name="title_fruit_fragment">Fruit Fetcher</string>
    <string name="title_basket_fragment">Basket</string>
    <string name="title_todo_fragment">Todo</string>

    <!-- login -->
    <string name="login_enter_email_hint">fake email</string>
    <string name="login_enter_password_hint">fake password</string>
    <string name="login_not_a_valid_email">invalid email</string>
    <string name="login_show_password">show password</string>
    <string name="login_login">Login</string>
    <string name="login_logout">Logout</string>

    <!-- fruit collector -->
    <string name="fruit_go">Go</string>
    <string name="fruit_clear">Clear</string>
    <string name="fruit_remove">remove</string>
    <string name="fruit_nocitrus">(no citrus)</string>
    <string name="fruit_citruscount">citrus only:</string>
    <string name="fruit_totalcount">total fruit:</string>
    <string name="fruit_fetchingfruit">(fetching fruit)</string>

    <!-- basket -->
    <string name="basket_add">Add Item</string>
    <string name="basket_remove">Remove Item</string>
    <string name="basket_applydiscount">Apply 10\% Discount</string>
    <string name="basket_total">Total</string>
    <string name="basket_discount">Discount</string>
    <string name="basket_checkout">Checkout</string>
    <string name="basket_info_msg">The BasketModel driving this view is locally scoped (rather
        than application level scoped) so if you navigate away from the tab it will be destroyed.
        But because it is an androidx ViewModel, it DOES survive rotation.</string>

    <!-- todolist -->
    <string name="todo_clear">Clear</string>
    <string name="todo_mark_done">Mark As Done</string>
    <string name="todo_create">Create</string>
    <string name="todo_add">Add</string>
    <string name="todo_export">Exp</string>
    <string name="todo_hide">Hide</string>
    <string name="todo_show_done">Show Done</string>
    <string name="todo_desc_hint">Description</string>

    <!-- common -->
    <string name="common_dialog_title">Info</string>
    <string name="common_ok">ok</string>
    <string name="common_cancel">cancel</string>
    <string name="common_not_implemented_msg">Sorry, this feature has not been implemented</string>
    <string name="common_permission_denied_msg">you denied me!</string>

    <!-- error messages -->
    <string name="msg_empty_message"></string>
    <string name="msg_error_misc">Some kind of error, maybe check logs</string>
    <string name="msg_error_network">Network error, check connection</string>
    <string name="msg_error_server">Server down, try again soon</string>
    <string name="msg_error_client">Client error</string>
    <string name="msg_error_session_timeout">Unauthorized</string>
    <string name="msg_error_busy">Busy</string>
    <string name="msg_error_permission_denied">Permission Denied</string>
    <string name="msg_error_cancelled">Cancelled</string>

</resources>
