<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey">

    <ImageView
        android:id="@+id/basket_icon_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/common_space_medium"
        android:padding="@dimen/common_space_medium"
        android:src="@drawable/basket" />

    <TextView
        android:id="@+id/basket_items_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:padding="@dimen/common_space_medium"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/common_textsize_small"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/basket_buttoncontainer_linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/common_space_large"
                android:gravity="left"
                android:orientation="vertical"
                android:padding="@dimen/common_space_medium">

                <Button
                    android:id="@+id/basket_add_button"
                    style="@style/AppButtonPositive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/basket_add" />

                <Button
                    android:id="@+id/basket_remove_button"
                    style="@style/AppButtonNegative"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/basket_remove" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/basket_discount_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/basket_applydiscount" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/basket_buttoncontainer_linear"
                android:layout_toEndOf="@+id/basket_buttoncontainer_linear"
                android:layout_alignTop="@+id/basket_buttoncontainer_linear"
                android:paddingTop="@dimen/common_space_medium"
                android:paddingRight="@dimen/common_space_medium_large"
                android:paddingEnd="@dimen/common_space_medium_large"
                android:text="@string/basket_info_msg" />

            <LinearLayout
                android:id="@+id/basket_summary_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/basket_buttoncontainer_linear"
                android:layout_marginBottom="@dimen/common_space_medium"
                android:gravity="right"
                android:orientation="vertical"
                android:padding="@dimen/common_space_medium">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/common_space_small"
                        android:layout_marginRight="@dimen/common_space_small"
                        android:text="@string/basket_total"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/basket_total_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/common_space_small"
                        android:layout_marginRight="@dimen/common_space_small"
                        android:text="@string/basket_discount" />

                    <TextView
                        android:id="@+id/basket_discount_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/basket_checkout_button"
                style="@style/AppButtonPositive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/basket_summary_linear"
                android:layout_centerHorizontal="true"
                android:text="@string/basket_checkout" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
